fixed spacing
I had some weird spacing issues with footer and menu size updated to 1em.

--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,8 @@ ul, li {
 
 #location, #identity {
   align-items: center;
-  display: flex;
-  font-size: .8em;
-  font-weight: bold;
-  padding-left: 5%;
-  padding-bottom: 20px;
+  border: black solid 5px;
+  width:auto
 }
 
 footer {
@@ -192,7 +189,7 @@ footer {
   color: black;
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   
 }
 
